--- a/homework7/task1-2-3/package.json
+++ b/homework7/task1-2-3/package.json
@@ -1,7 +1,6 @@
 {
   "name": "task1-2-3",
   "version": "1.0.0",
-  "description": "",
   "main": "task1-2-3.js",
   "dependencies": {
     "jquery": "^3.3.1",
@@ -20,5 +19,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": ""
 }
