--- a/homework7/task1-2-3/package.json
+++ b/homework7/task1-2-3/package.json
@@ -9,9 +9,11 @@
   "devDependencies": {
     "browser-sync": "^2.24.4",
     "gulp": "^3.9.1",
+    "gulp-minify": "^3.0.2",
     "gulp-minify-css": "^1.2.4",
     "gulp-minify-html": "^1.0.6",
     "gulp-sass": "^4.0.1",
+    "gulp-uglify": "^3.0.0",
     "sass": "^1.7.0"
   },
   "scripts": {
