--- a/php2-6/composer.json
+++ b/php2-6/composer.json
@@ -5,7 +5,8 @@
   "require": {
     "php": ">7",
     "twig/twig": "^2.4",
-    "ext-json": "*"
+    "ext-json": "*",
+    "ext-SimpleXML": "*"
   },
   "license": "MIT",
   "authors": [
@@ -23,3 +24,4 @@
     ]
   }
 }
+
