--- a/yii2-2-3/.htaccess
+++ b/yii2-2-3/.htaccess
@@ -1,10 +1,13 @@
 RewriteEngine On
 
 # End the processing, if a rewrite already occurred
-RewriteRule ^(frontend|backend)/web/ - [L]
+RewriteRule ^(frontend|backend|api)/web/ - [L]
 
 # Handle the case of backend, skip ([S=1]) the following rule, if current matched
 RewriteRule ^admin(/(.*))?$ backend/web/$2 [S=1]
+
+# Handle the case of api, skip ([S=1]) the following rule, if current matched
+RewriteRule ^api(/(.*))?$ api/web/$2 [S=1]
 
 # handle the case of frontend
 RewriteRule .* frontend/web/$0
