--- a/react_project/.gitignore
+++ b/react_project/.gitignore
@@ -20,6 +20,9 @@ Thumbs.db
 # composer vendor dir
 /vendor
 
+# nom node_modules dir
+/node_modules
+
 # composer itself is not needed
 composer.phar
 
